# rustcraft

./: .gitignore  Cargo.toml  build.sh  launch.sh
src/: lib.rs
src/render/: load_texture_image.rs  mod.rs  render_trait.rs
src/render/tile/: basic.rs  block.rs  mod.rs
src/shader/: lib.rs  mod.rs
src/shader/glsl/: basic-fragment.glsl  block-fragment.glsl  block-vertex.glsl
web/: index.html
